# skeleposer

./: CLAUDE.md  CMakeLists.txt  README.md
UE5Plugin/Skeleposer/: Skeleposer.uplugin
UE5Plugin/Skeleposer/Source/Skeleposer/: Skeleposer.Build.cs
UE5Plugin/Skeleposer/Source/Skeleposer/Private/: RigUnit_Skeleposer.cpp  Skeleposer.cpp
UE5Plugin/Skeleposer/Source/Skeleposer/Public/: RigUnit_Skeleposer.h  Skeleposer.h
Unity/: Skeleposer.cs
cmake/: FindMaya.cmake
mayaModule/: skeleposer.mod
mayaModule/skeleposer/scripts/skeleposerEditor/: __init__.py  core.py  skeleposer.py  ui.py  utils.py
plugins/2019/: skeleposer.mll
plugins/2020/: skeleposer.mll
skeleposerEditor/: HowToMakeFacialRigs.txt  __init__.py
source/: blendMatrix.cpp  blendMatrix.h  main.cpp  skeleposer.cpp  skeleposer.h  stickyMatrix.cpp  stickyMatrix.h  utils.hpp
